@@ -38,6 +38,9 @@ BUGFIXES:
 
   ZOOKEEPER-737. some 4 letter words may fail with netcat (nc) (mahadev)
 
+  ZOOKEEPER-763. Deadlock on close w/ zkpython / c client
+  (henry via phunt)
+
 Release 3.3.0 - 2010-03-24
 
 Non-backward compatible changes:
